[tool.poetry]
name = "jdb-py"
version = "0.1.0"
description = ""
authors = ["xiliuya <xiliuya@aliyun.com>"]
readme = "README.md"
packages = [{include = "jdb_py"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.38"
pygments = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jdb-py = 'jdb_py.main:run'
