[tool.poetry]
name = "jdb-py"
version = "0.1.0"
description = "这是一个用于补全 jdb 调试器的命令的工具"
authors = ["xiliuya <xiliuya@aliyun.com>"]
readme = "README.md"
packages = [{include = "jdb_py"}]
repository = "https://github.com/xiliuya/jdb-py"
keywords = ["debugger", "java"]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.38"
pygments = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jdb-py = 'jdb_py.main:run'
